--- a/src/Game.css
+++ b/src/Game.css
@@ -13,24 +13,50 @@
   margin-bottom: 35px;
 }
 
+.letter,
+.key {
+  padding: 10px;
+  border: 1px solid black;
+}
+
+.letter.green,
+.key.found {
+  background-color: green;
+}
+
+.letter.yellow,
+.key.missed {
+  background-color: yellow;
+}
+
 .form {
   margin-bottom: 100px;
+}
+
+.valid-word-warning {
+  margin-top: 20px;
+  color: red;
+  opacity: 0.7;
+  font-size: small;
 }
 
 .victory-message {
   color: green;
   font-size: large;
+  margin-bottom: 30px;
 }
 
-.letter {
-  padding: 10px;
-  border: 1px solid black;
+.defeat-message {
+  color: red;
+  font-size: large;
+  margin-bottom: 30px;
 }
 
-.green {
-  background-color: green;
-}
-
-.yellow {
-  background-color: yellow;
+.keyboard-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: absolute;
+  bottom: 100px;
+  max-width: 320px;
 }
