--- a/src/Game.css
+++ b/src/Game.css
@@ -16,6 +16,7 @@
 .letter,
 .key {
   padding: 10px;
+  margin: -1px 0 0 -1px;
   border: 1px solid black;
 }
 
@@ -37,7 +38,7 @@
   margin-bottom: 100px;
 }
 
-.valid-word-warning {
+.input-warning {
   margin-top: 20px;
   color: red;
   opacity: 0.7;
@@ -57,11 +58,11 @@
 }
 
 .keyboard-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   position: absolute;
-  bottom: 100px;
-  max-width: 320px;
-  min-width: 320px;
+  bottom: 50px;
+}
+
+.keyboard-row {
+  display: flex;
+  justify-content: center;
 }
