--- a/src/czubordle/Game.css
+++ b/src/czubordle/Game.css
@@ -5,6 +5,12 @@
   text-align: center;
 }
 
+header {
+  text-align: center;
+  margin: 10px 0 30px;
+  font-size: 40px;
+}
+
 .word {
   margin-bottom: 25px;
 }
